# devel

controller/: CMakeLists.txt  README.md
controller/include/: controller.hpp  socket.hpp
controller/logs/: 20250724_log_errors.csv
controller/protos/: api_v2.proto  api_v2_rtos.proto
controller/src/: controller.cpp  main.cpp  socket.cpp
data_visualisation/: 20250722_1707_cmd_trajectory.csv  20250722_1707_data_log.csv  20250723_1043_data_log.csv  20250723_1057_data_log.csv  20250723_1114_data_log.csv  20250724_data_log.csv  20250724_log_errors.csv  acquisition_ros.cpp  cmd_trajectory.csv  daq_publisher.cpp  data_acquisition_continuous.py  data_acquisition_continuous_plot_csv.py  data_acquisition_continuous_test.py  data_acquisition_test.py  data_log.csv  log_plot.py  plot.py  plot_2.0.py
data_visualisation/csv archive/: 20250626_data_log.csv  20250701_1004_data_log.csv  20250701_1007_data_log.csv  20250701_1203_data_log.csv  20250709_data_log.csv  20250710_1104_data_log.csv  20250710_1_data_log.csv  20250710_2_data_log.csv  20250710_3_data_log.csv  20250722_1422_cmd_trajectory.csv  20250722_1422_data_log.csv  20250722_1523_cmd_trajectory.csv  20250722_1523_data_log.csv  20250722_1702_cmd_trajectory.csv  20250722_acquisition.csv  20250722_cmd_trajectory.csv
sensor_publisher/src/: daq_publisher.cpp  force_moment_subscriber.cpp
